aws/cloudformation/napote_dev_network.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "AppVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "", [ "AppVPC-",  { "Ref" : "environmentName"} ] ] }
          }
        ],
        "CidrBlock": {
          "Ref": "vpcCIDR"
        }
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {}
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "DependsOn": "InternetGateway",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        },
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "AppPublicASubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "publicNetAAvailabilityZone"
        },
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "", [ "AppPublicASubnet ",  { "Ref" : "environmentName"} ] ] }
          }
        ],
        "CidrBlock": {
          "Ref": "publicNetACIDR"
        },
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "AppPublicBSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "publicNetBAvailabilityZone"
        },
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "", [ "AppPublicBSubnet ",  { "Ref" : "environmentName"} ] ] }
          }
        ],
        "CidrBlock": {
          "Ref": "publicNetBCIDR"
        },
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "AppPublicCSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "publicNetCAvailabilityZone"
        },
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "", [ "AppPublicCSubnet ",  { "Ref" : "environmentName"} ] ] }
          }
        ],
        "CidrBlock": {
          "Ref": "publicNetCCIDR"
        },
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "AppPrivateSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "privateNetAAvailabilityZone"
        },
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "", [ "AppPrivateSubnetA ",  { "Ref" : "environmentName"} ] ] }
          }
        ],
        "CidrBlock": {
          "Ref": "privateNetACIDR"
        },
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "AppPrivateSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "privateNetBAvailabilityZone"
        },
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": {"Fn::Join" : [ "", [ "AppPrivateSubnetB ",  { "Ref" : "environmentName"} ] ] }
          }
        ],
        "CidrBlock": {
          "Ref": "privateNetBCIDR"
        },
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "PublicNetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": "PublicNetRouteTable"
          }
        ],
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "PrivateNetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": "PrivateNetRouteTable"
          }
        ],
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "NATGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId" : {
          "Ref": "natgweipalloc"
        },
        "SubnetId": {
          "Ref": "AppPublicASubnet"
        }
      }
    },
    "PrivateSubnetARouteTable": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateNetRouteTable"
        },
        "SubnetId": {
          "Ref": "AppPrivateSubnetA"
        }
      }
    },
     "PublicSubnetARouteTable": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicNetRouteTable"
        },
        "SubnetId": {
          "Ref": "AppPublicASubnet"
        }
      }
    },
    "PublicSubnetBRouteTable": {
     "Type": "AWS::EC2::SubnetRouteTableAssociation",
     "Properties": {
       "RouteTableId": {
         "Ref": "PublicNetRouteTable"
       },
       "SubnetId": {
         "Ref": "AppPublicBSubnet"
       }
     }
   },
   "PublicSubnetCRouteTable": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "RouteTableId": {
        "Ref": "PublicNetRouteTable"
      },
      "SubnetId": {
        "Ref": "AppPublicCSubnet"
      }
    }
  },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PublicNetRouteTable"
        },
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "PrivateRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PrivateNetRouteTable"
        },
        "NatGatewayId": {
          "Ref": "NATGateway"
        }
      }
    },
    "SolitaInternalNetworksSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allowed connections from Solita Office",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "109.204.231.2/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "109.204.231.126/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "194.157.155.98/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "109.204.231.11/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "202.176.217.36/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "194.111.136.1/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "194.111.137.0/24"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "139.74.0.0/16"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "12.12.253.130/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "93.174.195.58/32"
          }
        ],
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": "SolitaInternalNetworksSG"
          }
        ],
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    },
    "AllowConnsFromJenkinsSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Group for allowing connections from CI VPC",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "10.55.0.0/16"
          }
        ],
        "Tags": [
          {
            "Key": "project",
            "Value": {
              "Ref": "projectTag"
            }
          },
          {
            "Key": "Name",
            "Value": "AllowConnsFromJenkinsSG"
          }
        ],
        "VpcId": {
          "Ref": "AppVPC"
        }
      }
    }
  },
    "Parameters": {
      "projectTag": {
        "Description": "Project Name for Tagging Purposes",
        "Type": "String",
        "Default": "napote-dev"
    },
    "vpcName": {
      "Description": "VPC Name",
      "Type": "String",
      "Default": "napote-dev-vpc"
    },
    "vpcCIDR": {
      "Description": "VPC CIDR",
      "Type": "String",
      "Default": "10.44.0.0/16"
    },
    "publicNetACIDR": {
      "Description": "Public Subnet A CIDR",
      "Type": "String",
      "Default": "10.44.1.0/24"
    },
    "publicNetAAvailabilityZone": {
      "Description": "Public Subnet A Availability Zone",
      "Type": "String",
      "Default": "eu-central-1a"
    },
    "publicNetBCIDR": {
      "Description": "Public Subnet B CIDR",
      "Type": "String",
      "Default": "10.44.2.0/24"
    },
    "publicNetBAvailabilityZone": {
      "Description": "Public Subnet B Availability Zone",
      "Type": "String",
      "Default": "eu-central-1b"
    },
    "publicNetCCIDR": {
      "Description": "Public Subnet C CIDR",
      "Type": "String",
      "Default": "10.44.3.0/24"
    },
    "publicNetCAvailabilityZone": {
      "Description": "Public Subnet C Availability Zone",
      "Type": "String",
      "Default": "eu-central-1c"
    },
    "privateNetACIDR": {
      "Description": "Private Subnet A CIDR",
      "Type": "String",
      "Default": "10.44.4.0/24"
    },
    "privateNetAAvailabilityZone": {
      "Description": "Private Subnet A Availability Zone",
      "Type": "String",
      "Default": "eu-central-1a"
    },
    "privateNetBCIDR": {
      "Description": "Private Subnet B CIDR",
      "Type": "String",
      "Default": "10.44.5.0/24"
    },
    "privateNetBAvailabilityZone": {
      "Description": "Private Subnet B Availability Zone",
      "Type": "String",
      "Default": "eu-central-1b"
    },
    "privateNetCCIDR": {
      "Description": "Private Subnet C CIDR",
      "Type": "String",
      "Default": "10.44.6.0/24"
    },
    "privateNetCAvailabilityZone": {
      "Description": "Private Subnet C Availability Zone",
      "Type": "String",
      "Default": "eu-central-1c"
    },
    "appImageID": {
      "Description": "Image ID",
      "Type": "String",
      "Default": "omitted"
    },
    "sshKeyName": {
      "Description": "SSH key name to use on new instances",
      "Type": "String",
      "Default": "napote-dev"
    },
    "environmentName": {
      "Description": "Name of AppEnvironment e.g. DEV, PROD or similar",
      "Type": "String",
      "Default": "dev"
    },
    "natgweipalloc": {
      "Description": "Elastic ip allocation id for nat gw",
      "Type": "String",
      "Default": "no default entry"
    },
    "CIVPCIDCIDRRange": {
      "Description": "CI VPC CIDR",
      "Type": "String",
      "Default": "10.55.0.0/16"
    }
  },
  "Outputs": {
    "vpcId": {
      "Value": { "Ref": "AppVPC" }
    },
    "solitaInternalSGId": {
        "Value": { "Ref": "SolitaInternalNetworksSG" }
    },
    "privateSubnetA": {
        "Value": { "Ref": "AppPrivateSubnetA" }
    }
  },
  "Description": "Application network stack, creates Application VPC with subnet."
}
